--- a/caledar.css
+++ b/caledar.css
@@ -1,4 +1,7 @@
-
+td:hover{
+    color:aliceblue;
+    transition: all 0.4s ease;
+}
 table ,td,tr{
     border: 1px solid black ;
     border-collapse: collapse;
