--- a/caledar.css
+++ b/caledar.css
@@ -3,8 +3,9 @@ td:hover{
     transition: all 0.4s ease;
 }
 table ,td,tr{
-    border: 1px solid black ;
+    border: 1px solid rgb(255, 255, 255) ;
     border-collapse: collapse;
+    background-color:lightseagreen;
     
 }
 
